# SysAtlas

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: auth.py  devices.py  health.py  integrations.py  libraries.py  meta.py  settings.py  users.py
backend/app/core/: access_control.py  config.py  security.py
backend/app/db/: session.py
backend/app/integrations/: __init__.py  registry.py  types.py
backend/app/integrations/active_directory/: __init__.py  manifest.py
backend/app/integrations/intune/: __init__.py  devices.py  manifest.py  oauth.py
backend/app/integrations/microsoft_365_admin_center/: __init__.py  manifest.py
backend/app/integrations/microsoft_entra/: __init__.py  manifest.py
backend/app/integrations/microsoft_exchange_admin_center/: __init__.py  manifest.py
backend/app/integrations/microsoft_sharepoint/: __init__.py  manifest.py
backend/app/integrations/microsoft_teams/: __init__.py  manifest.py
backend/app/models/: __init__.py  access_profile.py  integration_connection.py  managed_device.py  managed_user.py  system_setting.py  user.py
backend/app/schemas/: access_control.py  auth.py  integrations.py  inventory.py  libraries.py
backend/app/services/: access_control.py  auth.py  integration_secrets.py  integrations.py  inventory.py  libraries.py  system_settings.py
backend/sysatlas_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+49 files in other folders)
